--- a/03_koa/package.json
+++ b/03_koa/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "koa": "^2.6.1"
+    "koa": "^2.6.1",
+    "koa-router": "^7.4.0"
   }
 }
