--- a/02_mpvue/mpvueDemo/project.config.json
+++ b/02_mpvue/mpvueDemo/project.config.json
@@ -8,6 +8,7 @@
 		"newFeature": true
 	},
 	"miniprogramRoot": "/dist/wx/",
+  "qcloudRoot":"./server/",
 	"compileType": "miniprogram",
 	"appid": "wx6ef35a5b8a2a87c1",
 	"projectname": "mpvuedemo",
