--- a/02_mpvue/mpvueDemo/project.config.json
+++ b/02_mpvue/mpvueDemo/project.config.json
@@ -1,14 +1,14 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": false,
 		"postcss": true,
 		"minified": true,
 		"newFeature": true
 	},
-	"miniprogramRoot": "/dist/wx/",
-  "qcloudRoot":"./server/",
+	"miniprogramRoot": "dist/wx/",
+	"qcloudRoot": "server/",
 	"compileType": "miniprogram",
 	"appid": "wx6ef35a5b8a2a87c1",
 	"projectname": "mpvuedemo",
