--- a/02_mpvue/mpvueDemo/src/app.json
+++ b/02_mpvue/mpvueDemo/src/app.json
@@ -1,14 +1,36 @@
 {
   "pages": [
     "pages/index/main",
-    "pages/logs/main",
-    "pages/counter/main",
-    "pages/todolist/main"
+    "pages/book/main",
+    "pages/comments/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "Hello",
-    "navigationBarTextStyle": "black"
+    "navigationBarBackgroundColor": "#EA5149",
+    "navigationBarTitleText": "HelloWorld",
+    "navigationBarTextStyle": "light"
+  },
+  "tabBar": {
+    "selectedColor":"#EA5149",
+    "list": [
+      {
+        "pagePath": "pages/index/main",
+        "text": "首页",
+        "iconPath":"static/img/me.png",
+        "selectedIconPath":"static/img/me-active.png"
+      },
+      {
+        "pagePath": "pages/book/main",
+        "text": "图书",
+        "iconPath":"static/img/book.png",
+        "selectedIconPath":"static/img/book-active.png"
+      },
+      {
+        "pagePath": "pages/comments/main",
+        "text": "评论",
+        "iconPath":"static/img/todo.png",
+        "selectedIconPath":"static/img/todo-active.png"
+      }
+    ]
   }
 }
