新增测试扫描接口

--- a/02_mpvue/mpvueDemo/package.json
+++ b/02_mpvue/mpvueDemo/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "ajv": "^6.5.5",
     "mpvue": "^1.0.11",
+    "node-sass": "^4.10.0",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.17",
     "vuex": "^3.0.1",
     "wafer2-client-sdk": "^2.1.0"
