--- a/02_mpvue/mpvueDemo/src/app.json
+++ b/02_mpvue/mpvueDemo/src/app.json
@@ -7,8 +7,9 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#EA5149",
-    "navigationBarTitleText": "HelloWorld",
-    "navigationBarTextStyle": "light"
+    "navigationBarTitleText": "图书",
+    "navigationBarTextStyle": "light",
+    "enablePullDownRefresh":true
   },
   "tabBar": {
     "selectedColor":"#EA5149",
