--- a/02_mpvue/mpvueDemo/src/pages/index/app.json
+++ b/02_mpvue/mpvueDemo/src/pages/index/app.json
@@ -1,9 +1,12 @@
 {
+  "pages": [
+    "pages/index/main"
+  ],
+  "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#EA5149",
     "navigationBarTitleText": "HelloWorld22",
-    "navigationBarTextStyle": "light",
-    "enablePullDownRefresh":true
+    "navigationBarTextStyle": "light"
+  }
 }
-
 
