新增浏览量数据库累加

--- a/02_mpvue/mpvueDemo/src/app.json
+++ b/02_mpvue/mpvueDemo/src/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/book/main",
     "pages/comments/main",
-    "pages/index/main"
+    "pages/index/main",
+    "pages/detail/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
