--- a/02_mpvue/mpvueDemo/src/pages/detail/app.json
+++ b/02_mpvue/mpvueDemo/src/pages/detail/app.json
@@ -1,10 +1,7 @@
 {
-  "pages": [
-    "pages/book/main"
-  ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#EA5149",
+    "navigationBarBackgroundColor": "#FA5149",
     "navigationBarTitleText": "HelloWorld22",
     "navigationBarTextStyle": "light"
   }
